# ace-lite

./: .aceignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
docs/: README.md
scripts/: archive_validation_rich_evidence.py  backfill_latency_slo_summary.py  build_academic_optimization_report.py  build_freeze_trend_report.py  build_friction_report.py  build_gap_report.py  build_latency_slo_trend_report.py  build_problem_ledger.py  build_validation_rich_comparison_report.py  build_validation_rich_trend_report.py  create_dated_checkpoint.py  evaluate_validation_rich_gate_promotion.py  generate_quality_optimization_baseline.py  log_friction_event.py  measure_repomap_cache_memo.py  metrics_collector.py  phase2_overlay_builder.py  plan_quick_outcome_summary.py  quality_benchmark_manifest.py  quick_to_plan_utility_summary.py  ralph_wiggum_iterate.py  run_academic_optimization_benchmark.py  run_arm_sweeper.py  run_benchmark.ps1  run_benchmark_matrix.py  run_benchmark_tabi_v3.ps1  run_context_refine_stability.py  run_e2e_success_slice.py  run_feature_slice_matrix.py  run_freeze_stability.py  run_full_validation.ps1  run_precommit_validation.py  run_quality_gate.py  run_release_freeze_regression.py  run_scenario_validation.py  run_skill_validation.py  run_smoke.ps1  run_validation_rich_stability.py  run_workspace_summary_benchmark.py  scan_quality_hotspots.py  (+6 more)
skills/: ace-dev.md  mem0-codex-playbook.md  (+9 more)
(+966 files in other folders)
